Mountain and cloud images position definided with absolute position

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <head>
         <meta charset="utf-8">
         <title>Fernando González</title>
+        <!-- Css -->
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <!-- Icon Page -->
+        <link href="" rel="icon">
+        
     </head>
     <body>
+
+        <div class="top-container">
+            <img src="resources/cloud.png" alt="cloud-image" id="cloud-image-1">
+            <h1>I am Fernando González.</h1>
+            <p>A software developer</p>
+            <img src="resources/cloud.png" alt="cloud-image" id="cloud-image-2">
+            <img src="resources/mountain.png">
+        </div>
+
+        <div class="middle-container">
+
+        </div>
+
+        <div class="bottom-container">
+
+        </div>
         
+
     </body>
 </html>
