body containers structure done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
         <!-- Icon Page -->
         <link href="" rel="icon">
+        <!-- fonts Google -->
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
         
     </head>
     <body>
@@ -21,11 +25,39 @@
         </div>
 
         <div class="middle-container">
-
+            <div class="profile">
+                <img src="resources/photo.JPG" alt="profile-photo" id="profile-photo">
+                <h2>Hello.</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ad, dolorum quam, id, nulla nemo error recusandae fuga ut odit harum soluta quas dolorem necessitatibus doloremque debitis. Laudantium, voluptas voluptatibus.</p>
+            </div>
+            <hr>
+            <div class="skills">
+                <h2>my skills.</h2>
+                <div class="skill-row">
+                    <img class="" src="" alt="">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
+                </div>
+                <div class="skill-row">
+                    <img class="" src="" alt="">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="contact-me">
+                <h2>Get In Touch</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quo reiciendis atque tempore dolore laudantium tenetur iusto nihil. Ducimus animi eligendi omnis explicabo non quas quasi voluptas consequatur ad repellendus?</p>
+                <a class="btn" href="mailto:name@gmail.com">CONTACT ME</a>
+            </div>
         </div>
 
         <div class="bottom-container">
-
+            <a class="footer-link" href="">LinkedIn</a>
+            <a class="footer-link" href="">Twitter</a>
+            <a class="footer-link" href="">Website</a>
+            <p>2018 Fernando González</p>
         </div>
         
 
