No special Changes, this is before restore my MaC

--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
         <!-- fonts Google -->
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap&family=Montserrat+Alternates&display=swap" rel="stylesheet">
         
     </head>
     <body>
 
         <div class="top-container">
             <img src="resources/cloud.png" alt="cloud-image" id="cloud-image-1">
-            <h1>I am Fernando González.</h1>
-            <p>A software developer</p>
+            <h1>I'm Fernando.</h1>
+            <h2>A software developer</h2>
             <img src="resources/cloud.png" alt="cloud-image" id="cloud-image-2">
             <img src="resources/mountain.png">
         </div>
 
         <div class="middle-container">
             <div class="profile">
-                <img src="resources/photo.JPG" alt="profile-photo" id="profile-photo">
+                <img src="resources/person.png" alt="profile-photo" id="profile-photo">
                 <h2>Hello.</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ad, dolorum quam, id, nulla nemo error recusandae fuga ut odit harum soluta quas dolorem necessitatibus doloremque debitis. Laudantium, voluptas voluptatibus.</p>
+                <p class="intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ad, dolorum quam, id, nulla nemo error recusandae fuga ut odit harum soluta quas dolorem necessitatibus doloremque debitis. Laudantium, voluptas voluptatibus.</p>
             </div>
             <hr>
             <div class="skills">
-                <h2>my skills.</h2>
+                <h2>My skills.</h2>
                 <div class="skill-row">
-                    <img class="" src="" alt="">
+                    <img class="skill-image-left" src="resources/person.png" alt="">
                     <h3>Lorem ipsum dolor</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
                 </div>
                 <div class="skill-row">
-                    <img class="" src="" alt="">
+                    <img class="skill-image-rigth" src="resources/person.png" alt="">
                     <h3>Lorem ipsum dolor</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
                 </div>
@@ -48,7 +48,7 @@
             <div class="contact-me">
                 <h2>Get In Touch</h2>
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quo reiciendis atque tempore dolore laudantium tenetur iusto nihil. Ducimus animi eligendi omnis explicabo non quas quasi voluptas consequatur ad repellendus?</p>
+                <p class="contact-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate quo reiciendis atque tempore dolore laudantium tenetur iusto nihil. Ducimus animi eligendi omnis explicabo non quas quasi voluptas consequatur ad repellendus?</p>
                 <a class="btn" href="mailto:name@gmail.com">CONTACT ME</a>
             </div>
         </div>
@@ -57,7 +57,7 @@
             <a class="footer-link" href="">LinkedIn</a>
             <a class="footer-link" href="">Twitter</a>
             <a class="footer-link" href="">Website</a>
-            <p>2018 Fernando González</p>
+            <p>© 2021 Fernando González</p>
         </div>
         
 
