A template is Done, Personal information is the next step

--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
         </div>
 
         <div class="bottom-container">
-            <a class="footer-link" href="">LinkedIn</a>
-            <a class="footer-link" href="">Twitter</a>
-            <a class="footer-link" href="">Website</a>
-            <p>© 2021 Fernando González</p>
+            <a class="footer-link" href="#">LinkedIn</a>
+            <a class="footer-link" href="#">GitHub</a>
+            <p class="copyright">© 2021 Fernando González</p>
         </div>
-        
 
     </body>
 </html>
