Functionality added to a linkedin and Github profile

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
 
         <div class="bottom-container">
-            <a class="footer-link" href="#">LinkedIn</a>
-            <a class="footer-link" href="#">GitHub</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/fernando-guerrero-gonzález-507811219">LinkedIn</a>
+            <a class="footer-link" href="https://www.github.com/FernandoGonz">GitHub</a>
             <p class="copyright">© 2021 Fernando González</p>
         </div>
 
