Formation and Publication sections are Done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap&family=Montserrat+Alternates&display=swap" rel="stylesheet">
+        <!-- Bootstrap 5 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">  -->
         
     </head>
     <body>
+        <div class="nav">
+            <ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/fernando-guerrero-gonzález-507811219">Linkedin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.github.com/FernandoGonz">GitHub</a>
+                </li>
+            </ul>
+        </div>
 
         <div class="top-container">
             <img src="resources/cloud.png" alt="cloud-image" id="cloud-image-1">
@@ -28,7 +42,23 @@
             <div class="profile">
                 <img src="resources/person.png" alt="profile-photo" id="profile-photo">
                 <h2>Hello.</h2>
-                <p class="intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ad, dolorum quam, id, nulla nemo error recusandae fuga ut odit harum soluta quas dolorem necessitatibus doloremque debitis. Laudantium, voluptas voluptatibus.</p>
+                <p class="intro">My name is Fernando González, Programmer 💻, Techie 📱, Geek ⌚️, Foodie 🌮, Gamer 🎮, Hungry for knowledge 📚. </p>
+            </div>
+            <hr>
+            <div>
+                <h2>Academic</h2>
+                <div class="academic-row">
+                    <img class="academic-image" src="resources/itsur.png" alt="itsur-logo">
+                    <h3>Engineering degree, Computer Systems Engineer (2012-2017)</h3>
+                    <h3>Instituto Tecnológico Superior del Sur de Guanajuato</h3>
+                    <p>Av. Educación Superior No. 2000, Col. Benito Juárez.<br>Uriangato, Gto. C.P. 38940. Tel. (445) 457 74 68.</p>
+                </div>
+                <div class="academic-row">
+                    <img class="academic-image" src="resources/ugto.png" alt="ugto-logo">
+                    <h3>Master's degree, Technological Management and Innovation (2019-2021)</h3>
+                    <h3>Universidad de Guanajuato</h3>
+                    <p>Av. 5 de mayo No. 18, Col. Yacatitas.<br>Yuriria, GTO. C.P. 38940. Tel. (445) 168 57 31.</p>
+                </div>
             </div>
             <hr>
             <div class="skills">
@@ -43,6 +73,32 @@
                     <h3>Lorem ipsum dolor</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
                 </div>
+                <div class="skill-row">
+                    <img class="skill-image-left" src="resources/person.png" alt="">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
+                </div>
+                <div class="skill-row">
+                    <img class="skill-image-rigth" src="resources/person.png" alt="">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolores magni beatae, amet tempora voluptate sint repudiandae et nemo error reprehenderit adipisci pariatur id harum obcaecati illo at, ea recusandae.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="publications">
+                <h2>Publications</h2>
+                <div class="publications-row">
+                    <img class="publications-image" src="resources/paper.png" alt="publication-image">
+                    <p>Guerrero, Fernando. (2020) "Sistema de pronóstico de la demanda de productos lubricantes fabricados por una empresa del ramo automotriz" <em>Academia Journals</em>, Vol. 12, No. 5, pp. 387-392, www.academiajournals.com.</p>
+                </div>
+                <div class="publications-row">
+                    <img class="publications-image" src="resources/paper.png" alt="publication-image">
+                    <p>Guerrero, Fernando. (2020) "Pronóstico de la demanda de productos de una textilera: Comparación entre los modelos Holt-Winters y ARIMA" <em>Academia Journals</em>, Vol. 12, No. 6, pp. 470-475, www.academiajournals.com.</p>
+                </div>
+                <div class="publications-row">
+                    <img class="publications-image" src="resources/paper.png" alt="publication-image">
+                    <p>Guerrero, Fernando. (2021) "Pronóstico del volumen de exportación de café en Colombia basado en el método Holt-Winters" <em>Academia Journals</em>, Vol. 13, No. 4, pp. 308-313, www.academiajournals.com.</p>
+                </div>
             </div>
             <hr>
             <div class="contact-me">
@@ -56,8 +112,13 @@
         <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/fernando-guerrero-gonzález-507811219">LinkedIn</a>
             <a class="footer-link" href="https://www.github.com/FernandoGonz">GitHub</a>
-            <p class="copyright">© 2021 Fernando González</p>
+            <p class="copyright">© 2021 Fernando González. v2021.1</p>
         </div>
+
+        <!-- JavaScript 
+        <script src="js/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        -->
 
     </body>
 </html>
